# data-extraction-api

./: .gitignore  DEPLOYMENT.md  README.md  TEST_ASSESSMENT_REPORT.md  VERIFICATION_REPORT.md  build_with_checks.sh  d  final-verification.txt  ml.py  simple_test.sh  t  test_acceptance.sh  test_e2e.py  test_e2e_complete.py
excel-addin-svelte/: README.md  build_with_checks.sh  index.html  manifest.xml  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts  vite.config.ts.backup
excel-addin-svelte/src/: App.svelte  app.css  main.ts
frontend_svelte_tailwindcss/: README.md  package.json
frontend_svelte_tailwindcss/src/: App.svelte
rest_api_duckdb/: .env.production  README.md  build_with_tests.sh  hello.py  pyproject.toml  run_tests.sh  setup_https.sh  test_database.py  test_result.feather  test_uncompressed.feather
rest_api_duckdb/app/: main.py
rest_api_duckdb/app/api/: error_logging.py  query.py
rest_api_duckdb/app/models/: schemas.py
rest_api_duckdb/app/services/: claude_analyzer.py  database.py
rest_api_duckdb/app/templates/: error_dashboard.html
rest_api_duckdb/certificates/: cert.pem  key.pem
rest_api_duckdb/data/: events.parquet
rest_api_duckdb/tests/: test_api.py  test_database.py  test_models.py
test-logs/20250821-205815/: run-report.txt
test-logs/20250821-211252/: run-report.txt
test-logs/20250821-211409/: run-report.txt
test-logs/20250821-211742/: run-report.txt
test-logs/20250821-213030/: run-report.txt
test-logs/20250821-213048/: run-report.txt
test-logs/20250821-213109/: run-report.txt
(+9 files in other folders)
