[project]
name = "rest-api-duckdb"
version = "0.1.0"
description = "Data extraction API with FastAPI and DuckDB"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.2",
    "fastapi>=0.116.1",
    "pydantic>=2.10.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]
